syntax = "proto3";

option csharp_namespace = "UserService";

package Student;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service Student{
  rpc CreateStudent(CreateStudentRequest) returns (CreateStudentResponse);
  rpc DropOutStudent(DropOutStudentRequest) returns (DropOutStudentResponse);
  rpc DeleteStudent(DeleteStudentRequest) returns (DeleteStudentResponse);
}

message CreateStudentRequest{
  sint64 Id = 1;
  string FirstName = 2;
  string LastName = 3;
  google.protobuf.StringValue PatronymicName = 4;
  sint32 GroupId = 5;
}

message CreateStudentResponse{
  sint64 Id = 1;
}

message DropOutStudentRequest{
  int64 Id = 1;
  google.protobuf.Timestamp DroppedTime = 3;
}

message DropOutStudentResponse{
  int64 Id = 1;
}

message DeleteStudentRequest{
  int64 Id = 1;
}

message DeleteStudentResponse{
  int64 Id = 1;
}